diesel_compile_tests/tests/fail/insert_requires_value_of_same_type_as_column.stderr
error[E0277]: the trait bound `{integer}: diesel::Expression` is not satisfied
  --> tests/fail/insert_requires_value_of_same_type_as_column.rs:18:37
   |
LL |     insert_into(users).values(&name.eq(1));
   |                                     ^^ the trait `diesel::Expression` is not implemented for `{integer}`
   |
   = help: the following other types implement trait `diesel::Expression`:
             &T
             AliasedField<S, C>
             Box<T>
             CaseWhen<CaseWhenConditionsIntermediateNode<W, T, Whens>, E>
             CaseWhen<CaseWhenConditionsLeaf<W, T>, ElseExpression<E>>
             CaseWhen<CaseWhenConditionsLeaf<W, T>, NoElseExpression>
             CountStar
             Exists<T>
           and N others
   = note: required for `{integer}` to implement `AsExpression<diesel::sql_types::Text>`

   For more information about this error, try `rustc --explain E0277`.
